# HTTP-Server-From-Scratch

./: .gitignore  CMakeLists.txt  README.md  runClient.sh  runServer.sh  scanLAN.sh  testfile.txt  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: client.cpp.4619525F583CC7E3.idx  discoverableServer.cpp.9089409B7BB202A4.idx  keylogger.cpp.D3F5097DB6ABE570.idx  keylogger.hpp.0954F69556D2F6BE.idx  keylogger.hpp.BC734B823236C6CD.idx  winClient.cpp.1AE2057F4483CE55.idx  winServer.cpp.6E60C3C5A36723CE.idx
build.bak/: client
dataServer/: discoverableServer.cpp  modifiedWinServer.cpp  winServer.cpp
remoteClient/: client.cpp  keylogger.cpp  winClient.cpp
remoteClient/windows/: keylogger.cpp  keylogger.hpp  winClient.cpp
scripts/: runBroadcaster.ps1  runClient.bat  runClient.ps1  runClient.sh  runServer.bat  runServer.ps1  runServer.sh  runTest.ps1  scanLAN.bat  scanLAN.ps1  scanLAN.sh  skeletonSyncer.sh  syncer.sh  testOutput.ps1  testRunClient.ps1  watcher.sh
src/: server.cpp
